--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
-  "name": "deezzy",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@vueuse/core": "^9.13.0",
-    "animate.css": "^4.1.1",
-    "pinia": "^2.0.32",
-    "pinia-plugin-persistedstate": "^3.1.0",
-    "uniqolor": "^1.1.0",
-    "vue": "^3.2.47",
-    "vue-material-design-icons": "^5.2.0",
-    "vue-router": "^4.1.6",
-    "vue3-carousel": "^0.2.14"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4"
-  }
+	"name": "dizastapiece",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@vueuse/core": "^9.13.0",
+		"animate.css": "^4.1.1",
+		"axios": "^0.27.2",
+		"flowbite": "^1.6.5",
+		"pinia": "^2.0.32",
+		"pinia-plugin-persistedstate": "^3.1.0",
+		"uniqolor": "^1.1.0",
+		"vue": "^3.2.37",
+		"vue-material-design-icons": "^5.2.0",
+		"vue-router": "^4.1.3",
+		"vue3-carousel": "^0.2.14"
+	},
+	"devDependencies": {
+		"@rushstack/eslint-patch": "^1.1.4",
+		"@types/node": "^16.18.26",
+		"@vitejs/plugin-vue": "^3.0.1",
+		"@vitejs/plugin-vue-jsx": "^2.0.0",
+		"@vue/eslint-config-prettier": "^7.0.0",
+		"@vue/eslint-config-typescript": "^11.0.0",
+		"@vue/tsconfig": "^0.1.3",
+		"autoprefixer": "^10.4.8",
+		"eslint": "^8.21.0",
+		"eslint-plugin-vue": "^9.3.0",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.16",
+		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.8",
+		"typescript": "~4.7.4",
+		"vite": "^3.0.4",
+		"vue-tsc": "^0.39.5"
+	}
 }
