--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
 		"@vueuse/core": "^9.13.0",
 		"animate.css": "^4.1.1",
 		"axios": "^0.27.2",
+		"dotenv-webpack": "^8.0.1",
+		"express": "^4.18.2",
 		"pinia": "^2.0.32",
 		"pinia-plugin-persistedstate": "^3.1.0",
+		"spotify-web-api-node": "^5.0.2",
 		"uniqolor": "^1.1.0",
 		"vue": "^3.2.37",
+		"vue-axios": "^3.5.2",
 		"vue-material-design-icons": "^5.2.0",
 		"vue-router": "^4.1.3",
 		"vue3-carousel": "^0.2.14"
