--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"express": "^4.18.2",
 		"pinia": "^2.0.32",
 		"pinia-plugin-persistedstate": "^3.1.0",
+		"spotify-web-api-js": "^1.5.2",
 		"spotify-web-api-node": "^5.0.2",
 		"uniqolor": "^1.1.0",
 		"vue": "^3.2.37",
