--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^0.27.2",
 		"dotenv-webpack": "^8.0.1",
 		"express": "^4.18.2",
+		"howler": "^2.2.3",
 		"pinia": "^2.0.32",
 		"pinia-plugin-persistedstate": "^3.1.0",
 		"spotify-web-api-js": "^1.5.2",
@@ -20,12 +21,14 @@
 		"uniqolor": "^1.1.0",
 		"vue": "^3.2.37",
 		"vue-axios": "^3.5.2",
+		"vue-composable": "^1.0.0-beta.24",
 		"vue-material-design-icons": "^5.2.0",
 		"vue-router": "^4.1.3",
 		"vue3-carousel": "^0.2.14"
 	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "^1.1.4",
+		"@tailwindcss/forms": "^0.5.3",
 		"@types/node": "^16.18.26",
 		"@vitejs/plugin-vue": "^3.0.1",
 		"@vitejs/plugin-vue-jsx": "^2.0.0",
